# mediawebcore

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
src/: app.py  cli.py  core.py  pyproject.toml  setup.py
src/mediawebcore/: core.py
src/mediawebcore/templates/: index.html
src/templates/: index.html
