# pyproject.toml
[project]
name = "mediawebcore"
version = "0.1.0"
description = "Web-based real-time webcam streaming server for virtual piano and other visual apps"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "manbavaran", email = "you@example.com"}
]
dependencies = [
  "flask",
  "flask-socketio",
  "eventlet",
  "opencv-python",
  "numpy"
]

[project.urls]
Homepage = "https://github.com/yourname/mediawebcore"
Documentation = "https://github.com/yourname/mediawebcore/wiki"

[project.scripts]
mediawebcore = "mediawebcore.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
