[project]
name = "mediawebcore"
version = "0.1.0"
description = "Web-based real-time webcam streaming server for AI applications like virtual piano"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
  { name = "manbavaran", email = "hybaek807@naver.com" }
]

dependencies = [
  "flask>=3.0.0",
  "flask-socketio>=5.3.0",
  "eventlet>=0.33.0",
  "opencv-python>=4.5.0",
  "numpy>=1.20.0"
]

classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Framework :: Flask",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Application Frameworks"
]

keywords = ["webcam", "flask", "socketio", "streaming", "realtime", "virtual piano", "media", "AI"]

[project.urls]
"Homepage" = "https://github.com/manbavaran/mediawebcore"
"Bug Tracker" = "https://github.com/manbavaran/mediawebcore/issues"
"Source" = "https://github.com/manbavaran/mediawebcore"

[project.scripts]
mediawebcore = "mediawebcore.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
